--- a/Spring/Basic/core/build.gradle
+++ b/Spring/Basic/core/build.gradle
@@ -20,9 +20,13 @@ repositories {
 	mavenCentral()
 }
 
+
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+	// web 라이브러리 추가
+	implementation 'org.springframework.boot:spring-boot-starter-web'
 
 	implementation 'javax.inject:javax.inject:1'
 
