--- a/Spring/MVC/servlet/build.gradle
+++ b/Spring/MVC/servlet/build.gradle
@@ -1,9 +1,15 @@
 plugins {
 	id 'java'
 	id 'war'
-	id 'org.springframework.boot' version '2.7.6'
+	id 'org.springframework.boot' version '2.5.5'
 	id 'io.spring.dependency-management' version '1.0.15.RELEASE'
 }
+
+//plugins {
+//	id 'org.springframework.boot' version '2.5.5'
+//	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
+//	id 'java'
+//}
 
 group = 'hello'
 version = '0.0.1-SNAPSHOT'
@@ -25,6 +31,11 @@ dependencies {
 	annotationProcessor 'org.projectlombok:lombok'
 //	providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+	//JSP 추가 시작
+	implementation 'org.apache.tomcat.embed:tomcat-embed-jasper'
+	implementation 'javax.servlet:jstl'
+	//JSP 추가 끝
 }
 
 tasks.named('test') {
